[gd_scene load_steps=4 format=3 uid="uid://bca8dk1lnddcs"]

[ext_resource type="Script" uid="uid://8pnlkrxqpeow" path="res://SCRIPTS/UI/General/simple_unit_entry.gd" id="1_7gf00"]
[ext_resource type="FontFile" uid="uid://dbk37dbkpdegv" path="res://ART/Fonts/ClassicShit.ttf" id="2_7gf00"]

[sub_resource type="LabelSettings" id="LabelSettings_j2esb"]
font = ExtResource("2_7gf00")
font_size = 24
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.545098)

[node name="UnitEntry" type="Button" node_paths=PackedStringArray("visualParent", "nameLabel")]
custom_minimum_size = Vector2(256, 64)
size_flags_vertical = 4
script = ExtResource("1_7gf00")
useIcon = false
useVisualParent = true
visualParent = NodePath("MarginContainer/HBoxContainer/VisualElementParent")
nameLabel = NodePath("MarginContainer/HBoxContainer/NameLabel")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="VisualElementParent" type="Control" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Miranda"
label_settings = SubResource("LabelSettings_j2esb")

[connection signal="focus_entered" from="." to="." method="OnFocus"]
[connection signal="focus_exited" from="." to="." method="OnUnfocus"]
[connection signal="pressed" from="." to="." method="OnButtonPressed"]
